tests/fixtures/original-compiler/passing/SelfRefAliasQualified/Lib.purs
module Lib where

type Model = { x :: Int }
